--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <ul>
-<li><a href="Member.html">Member.html</a></li>
+<li><a href="メンバー一覧.html">Member.html</a></li>
+<li><a href="YNN番組一覧.html">Member.html</a></li>
+<li><a href="メンバー別YNN一覧.html">Member.html</a></li>
+<li><a href="メンバー別楽曲一覧.html">Member.html</a></li>
 <li><a href="Member.json">Member.json</a></li>
 <li><a href="GooglePlusFeed2.html">GooglePlusFeed2.html</a></li>
 <li></li>
