--- a/メンバー別楽曲一覧.html
+++ b/メンバー別楽曲一覧.html
@@ -58,7 +58,7 @@ function getTitle(name)
    beforeSend: function(xhr){
     xhr.overrideMimeType('text/html;charset=utf-8');
    },
-   url:'https://ykquality.github.io/hosting/songs.txt',
+   url:'https://ykquality.github.io/hosting/dev/songs.txt',
    success: function(data){
     console.log("success! "+name);
     var html="";
