--- a/GooglePlusFeed2.html
+++ b/GooglePlusFeed2.html
@@ -57,7 +57,7 @@ function makeHTML(item,container){
 $(function(){
 	
 	$.getJSON("https://query.yahooapis.com/v1/public/yql?callback=?", {
-		q: "select * from rss(12) where url = 'http://yuzo-gplus.appspot.com/google_plus_user_rss_to_rss.jsp?cron=false&max_results=5&total_max_results=15'",
+		q: "select * from rss where url = 'http://yuzo-gplus.appspot.com/google_plus_user_rss_to_rss.jsp?cron=false&max_results=8&total_max_results=17'",
 		format: "json"
 	},function(data) {
 		var container=document.getElementById('MyGPlus');
