--- a/メンバー別YNN一覧.html
+++ b/メンバー別YNN一覧.html
@@ -72,6 +72,9 @@ $(document).ready(function () {
 	html+="<tr><td class={sortValue:"+sortvalue+"} onClick=getTitle('チームB2') style='cursor:pointer;'>"
 				 +"チームB2"
 				 +"</td></tr>";
+	html+="<tr><td class={sortValue:"+sortvalue+"} onClick=getTitle('チームB2') style='cursor:pointer;'>"
+				 +"研究生"
+				 +"</td></tr>";
 	$("#output2").append(html);
 		
 	for(var key in data){
