--- a/メンバー別楽曲一覧.html
+++ b/メンバー別楽曲一覧.html
@@ -97,7 +97,7 @@ $(function () {
 	 beforeSend: function(xhr){
 		xhr.overrideMimeType('text/html;charset=utf-8');
 	},
-	url:'https://ykquality.github.io/hosting/dev/songs.txt',
+	url:'https://ykquality.github.io/hosting/songs.txt',
 	success: function(data){
 		//console.log("success! "+name);
 		var html="";
