--- a/メンバー別楽曲一覧.html
+++ b/メンバー別楽曲一覧.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-※2016年11月22日現在<br />
+※2017年04月13日現在<br />
 <br />
 <script type="text/javascript">
 $(document).ready(function () {
@@ -48,7 +48,7 @@ function sorter(tablesorter)
 <script type="text/javascript">
 var dNames=null;
 (function duplicateName(){
-	console.log("duplicateName "+dNames);
+	//console.log("duplicateName "+dNames);
 	if(dNames!=null)
 		return;
 	$.ajax({
