--- a/YNN番組一覧.html
+++ b/YNN番組一覧.html
@@ -59,8 +59,8 @@ function sorter(tablesorter)
 <tr>
 <th width="150">タイトル</th>
 <th width="150">出演メンバー</th>
-<th>公開日</th>
-<th>生配信日</th>
+<th width="50">公開日</th>
+<th width="50">生配信日</th>
 </tr>
 </thead>
 <tbody id="output1">
