YNN グループ分け

--- a/メンバー別YNN一覧.html
+++ b/メンバー別YNN一覧.html
@@ -60,6 +60,15 @@ $(document).ready(function () {
 	var html="<tr><td onClick=getTitle('NMB48') style='cursor:pointer;'>"
 				 +"NMB48"
 				 +"</td></tr>";
+	html+="<tr><td onClick=getTitle('AKB48') style='cursor:pointer;'>"
+				 +"AKB48"
+				 +"</td></tr>";
+	html+="<tr><td onClick=getTitle('SKE48') style='cursor:pointer;'>"
+				 +"SKE48"
+				 +"</td></tr>";
+	html+="<tr><td onClick=getTitle('HKT48') style='cursor:pointer;'>"
+				 +"HKT48"
+				 +"</td></tr>";
 	html+="<tr><td onClick=getTitle('チームN') style='cursor:pointer;'>"
 				 +"チームN"
 				 +"</td></tr>";
@@ -102,9 +111,9 @@ function getTitle(name)
 		if(data[key].member.indexOf(name)>-1){
 			if(!duplicateName2(name,data[key].member)){
 				num++;
-				var html="<tr><td style='text-align:center;'><a href='"+data[key].url+"' >"+data[key].title+"</a><br/><img src='"+data[key].image+"' style='padding:0px;width:140px;height:80px;'></img></td>"
+				var html="<tr><td style='text-align:center;' width='150px'><a href='"+data[key].url+"' >"+data[key].title+"</a><br/><img src='"+data[key].image+"' style='padding:0px;width:140px;height:80px;'></img></td>"
 					// +"<td><a href='"+data[key].url+"' >"+data[key].title+"</a></td>"
-					 +"<td style='text-align:center;'>"+data[key].member+"</td>"
+					 +"<td style='text-align:center' width='160px'>"+data[key].member+"</td>"
 					 //+"<td style='text-align:center;'>"+data[key].update+"</td>"
 					 //+"<td style='text-align:center;'>"+data[key].live+"</td>"
 					 //+"<td style='text-align:center;'>"+data[key].url+"</td>"
@@ -151,8 +160,8 @@ function sorter(tablesorter)
 <table border="1" cellpadding="2" cellspacing="0" class="tablesorter2">
 <thead bgcolor="#F0F0F6">
 <tr>
-<th width="150">タイトル</th>
-<th width="150">出演メンバー</th>
+<th width="150px">タイトル</th>
+<th width="160px">出演メンバー</th>
 </tr>
 </thead>
 <tbody id="title">
