--- a/ynnscope3_MakeJson.html
+++ b/ynnscope3_MakeJson.html
@@ -20,7 +20,7 @@ function scope()
  //$.getJSON("http://yuzo-home.appspot.com/MemberJson?json=obj%2FMember.json", function(data){
  //$.getJSON("https://a59d2968cc8e66c6a7f22143518ed72eaf7c8ddc-www.googledrive.com/host/0B7bRq8mWofTuXzVVanVRa2lsaDg", function(data){ //dev
  //$.getJSON("https://ykquality.github.io/hosting/Member.json", function(data){ //dev
- $.getJSON("https://ykquality.github.io/hosting/ynn.json", function(data){ //dev
+ //$.getJSON("https://ykquality.github.io/hosting/ynn.json", function(data){ //Beta
  
   	$.getJSON("https://ykquality.github.io/hosting/Member.json", function(member){ //dev
   		 for(var key in data){
@@ -43,10 +43,21 @@ function scope()
   	});
 
 		var text="[<br/>";
-  for(var key in data){
-   	//var sortvalue_u = parseInt(data[key].birth.replace(/-/g,""));
-   	//var sortvalue=getSortValue(data[key].name_kana,7);
-   
+	for(var key in data){
+	//var sortvalue_u = parseInt(data[key].birth.replace(/-/g,""));
+	//var sortvalue=getSortValue(data[key].name_kana,7);
+
+		for(var i=0; i<data.length; i++){
+			var exists=-1;
+			if(data[key].url==data[i].url){
+				exists++;
+				console.log("exists:"+exists);
+			}
+			if(exists>0){
+				console.log("already exists title:"+data[key].title);
+				continue;
+			}
+		}
 		//console.log("title:"+data[key].title);
 		text+="{"+"<br/>";
 		text+="\""+"title"+"\""+":"+"\""+data[key].title+"\""+",<br/>";
