--- a/YNN番組一覧.html
+++ b/YNN番組一覧.html
@@ -18,8 +18,8 @@
 <br />
 <script type="text/javascript">
 $(document).ready(function () {
-  $.getJSON("https://ykquality.github.io/hosting/ynn.json", function(data){ //dev
-
+  //$.getJSON("https://ykquality.github.io/hosting/ynn.json", function(data){ //dev
+$.getJSON("ynn.json", function(data){ //dev
   for(var key in data){
    //var sortvalue_u = parseInt(data[key].birth.replace(/-/g,""));
    //var sortvalue=getSortValue(data[key].name_kana,7);
