--- a/メンバー一覧 _2.html
+++ b/メンバー一覧 _2.html
@@ -74,6 +74,9 @@ function sorter(tablesorter)
 <input type="button" value="Member_HKT" onclick="check('Member_HKT');"/><br />
 <input type="button" value="Member_NGT" onclick="check('Member_NGT');"/><br />
 <input type="button" value="Member_STU" onclick="check('Member_STU');"/><br />
+<input type="button" value="Member_STU" onclick="check('Member_JKT');"/><br />
+<input type="button" value="Member_STU" onclick="check('Member_TPE');"/><br />
+<input type="button" value="Member_STU" onclick="check('Member_BNK');"/><br />
 
 <table border="1" cellpadding="2" cellspacing="0" class="tablesorter">
 <thead bgcolor="#F0F0F6">
