--- a/メンバー一覧 _2.html
+++ b/メンバー一覧 _2.html
@@ -79,7 +79,7 @@ function sorter(tablesorter)
 <input type="button" value="Member_STU" onclick="check('Member_BNK');"/><br />
 
 <table border="1" cellpadding="2" cellspacing="0" class="tablesorter">
-<thead bgcolor="#F0F0F6">
+<thead bgcolor="#10F0F6">
 <tr>
 <th class="{sorter:'metadata'}" width="90">名前</th>
 <th class="{sorter:'metadata'}" width="90">誕生日</th>
