--- a/メンバー一覧 _2.html
+++ b/メンバー一覧 _2.html
@@ -54,6 +54,10 @@ function allcheck(){
 	read(JKT);
 	read(TPE);
 	read(BNK);
+	read(NOGI);
+	read(KEYA);
+	read(HINA);
+	read(YOSHI);
 }
 function groupname(file){
 	var r = "";
@@ -144,7 +148,7 @@ function namecheck(output)
 	var ele = document.getElementsByClassName("name");
 	for(var i=0;i<ele.length;i++){
 		var name1=ele[i].textContent;
-		for(var j=0;j<ele.length;j++){
+		for(var j=i;j<ele.length;j++){
 			var name2=ele[j].textContent;
 			var flag=false;
 			var html="<tr><td>"+name1+"</td>";
@@ -195,6 +199,36 @@ function bloodcheck(output)
 			default:console.log(blood);break;
 		}
 	}
+	$(output).append("<tr><td>A型</td><td>"+a[0]+"人</td><td>"+(a[0]/eleb.length*100|0)+"%</td><td>37%</td><td>"+a[1]+"</td></tr>");
+	$(output).append("<tr><td>B型</td><td>"+b[0]+"人</td><td>"+(b[0]/eleb.length*100|0)+"%</td><td>22%</td><td>"+b[1]+"</td></tr>");
+	$(output).append("<tr><td>O型</td><td>"+o[0]+"人</td><td>"+(o[0]/eleb.length*100|0)+"%</td><td>32%</td><td>"+o[1]+"</td></tr>");
+	$(output).append("<tr><td>AB型</td><td>"+ab[0]+"人</td><td>"+(ab[0]/eleb.length*100|0)+"%</td><td>9%</td><td>"+ab[1]+"</td></tr>");
+	$(output).append("<tr><td>不明</td><td>"+f[0]+"人</td><td>"+(f[0]/eleb.length*100|0)+"%</td><td>不明</td><td>"+f[1]+"</td></tr>");
+	
+}
+</script>
+<script type="text/javascript">
+function birthcheck(output)
+{
+	var eleb = document.getElementsByClassName("blood");
+	var elen = document.getElementsByClassName("name");
+	var a=[0,""];
+	var b=[0,""];
+	var o=[0,""];
+	var ab=[0,""];
+	var f=[0,""];
+	
+	for(var i=0;i<eleb.length;i++){
+		var blood=eleb[i].textContent;
+		switch (blood) {
+			case "A":a[0]++;a[1]+=" "+elen[i].textContent;break;
+			case "B":b[0]++;b[1]+=" "+elen[i].textContent;break;
+			case "O":o[0]++;o[1]+=" "+elen[i].textContent;break;
+			case "AB":ab[0]++;ab[1]+=" "+elen[i].textContent;break;
+			case "不明":f[0]++;f[1]+=" "+elen[i].textContent;break;
+			default:console.log(blood);break;
+		}
+	}
 	$(output).append("<tr><td>A型</td><td>"+a[0]+"人</td><td>"+a[1]+"</td></tr>");
 	$(output).append("<tr><td>B型</td><td>"+b[0]+"人</td><td>"+b[1]+"</td></tr>");
 	$(output).append("<tr><td>O型</td><td>"+o[0]+"人</td><td>"+o[1]+"</td></tr>");
@@ -204,72 +238,27 @@ function bloodcheck(output)
 }
 </script>
 <script type="text/javascript">
-function birthcheck(output)
-{
-	var eleb = document.getElementsByClassName("blood");
-	var elen = document.getElementsByClassName("name");
-	var texta="";
-	var numa=0;
-	var textb="";
-	var numb=0;
-	var texto="";
-	var numo=0;
-	var textab="";
-	var numab=0;
-	var textf="";
-	var numf=0;
-	
-	for(var i=0;i<eleb.length;i++){
-		var blood=eleb[i].textContent;
-		switch (blood) {
-			case "A":numa++;texta+=" "+elen[i].textContent;break;
-			case "B":numb++;textb+=" "+elen[i].textContent;break;
-			case "O":numo++;texto+=" "+elen[i].textContent;break;
-			case "AB":numab++;textab+=" "+elen[i].textContent;break;
-			case "不明":numf++;textf+=" "+elen[i].textContent;break;
-			default:console.log(blood);break;
-		}
-	}
-	$(output).append("<tr><td>A型</td><td>"+numa+"人</td><td>"+texta+"</td></tr>");
-	$(output).append("<tr><td>B型</td><td>"+numb+"人</td><td>"+textb+"</td></tr>");
-	$(output).append("<tr><td>O型</td><td>"+numo+"人</td><td>"+texto+"</td></tr>");
-	$(output).append("<tr><td>AB型</td><td>"+numab+"人</td><td>"+textab+"</td></tr>");
-	$(output).append("<tr><td>不明</td><td>"+numf+"人</td><td>"+textf+"</td></tr>");
-	
-}
-</script>
-<script type="text/javascript">
 function fromcheck(output)
 {
 	var eleb = document.getElementsByClassName("blood");
 	var elen = document.getElementsByClassName("name");
-	var texta="";
-	var numa=0;
-	var textb="";
-	var numb=0;
-	var texto="";
-	var numo=0;
-	var textab="";
-	var numab=0;
-	var textf="";
-	var numf=0;
+	var a=[0,""];
+	var b=[0,""];
+	var o=[0,""];
+	var ab=[0,""];
+	var f=[0,""];
 	
 	for(var i=0;i<eleb.length;i++){
 		var blood=eleb[i].textContent;
 		switch (blood) {
-			case "A":numa++;texta+=" "+elen[i].textContent;break;
-			case "B":numb++;textb+=" "+elen[i].textContent;break;
-			case "O":numo++;texto+=" "+elen[i].textContent;break;
-			case "AB":numab++;textab+=" "+elen[i].textContent;break;
-			case "不明":numf++;textf+=" "+elen[i].textContent;break;
+			case "A":a[0]++;a[1]+=" "+elen[i].textContent;break;
+			case "B":b[0]++;b[1]+=" "+elen[i].textContent;break;
+			case "O":o[0]++;o[1]+=" "+elen[i].textContent;break;
+			case "AB":ab[0]++;ab[1]+=" "+elen[i].textContent;break;
+			case "不明":f[0]++;f[1]+=" "+elen[i].textContent;break;
 			default:console.log(blood);break;
-		}
+		}O型32%、A型、B型22%、AB型9%
 	}
-	$(output).append("<tr><td>A型</td><td>"+numa+"人</td><td>"+texta+"</td></tr>");
-	$(output).append("<tr><td>B型</td><td>"+numb+"人</td><td>"+textb+"</td></tr>");
-	$(output).append("<tr><td>O型</td><td>"+numo+"人</td><td>"+texto+"</td></tr>");
-	$(output).append("<tr><td>AB型</td><td>"+numab+"人</td><td>"+textab+"</td></tr>");
-	$(output).append("<tr><td>不明</td><td>"+numf+"人</td><td>"+textf+"</td></tr>");
 	
 }
 </script>
@@ -301,6 +290,10 @@ function sorter(tablesorter)
 <input type="button" value="Member_JKT" onclick="check('Member_JKT');"/><br />
 <input type="button" value="Member_TPE" onclick="check('Member_TPE');"/><br />
 <input type="button" value="Member_BNK" onclick="check('Member_BNK');"/><br />
+<input type="button" value="Member_NOGI" onclick="check('Member_NOGI');"/><br />
+<input type="button" value="Member_KEYA" onclick="check('Member_KEYA');"/><br />
+<input type="button" value="Member_HINA" onclick="check('Member_HINA');"/><br />
+<input type="button" value="Member_YOSHI" onclick="check('Member_YOSHI');"/><br />
 <input type="button" value="allcheck" onclick="allcheck();"/><br />
 <input type="button" value="del" onclick="alldel();"/><br />
 <input type="button" value="名前1" onclick="namecheck('#output2');"/><br />
@@ -323,6 +316,8 @@ function sorter(tablesorter)
 <tr>
 <th width="30">血液型</th>
 <th width="30">人数</th>
+<th width="30">割合 グループ内</th>
+<th width="30">割合 日本の標準</th>
 <th width="30">名前</th>
 <tbody id="output3">
 </tbody>
